--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <!--Agregar los meta desc, author-->
@@ -14,17 +14,19 @@
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/main-styles.css">
 </head>
-<body>
+<body class="light">
     <header class="header">
         <nav class="main-nav">
-                <img class="nav-img" src="imgs/logo.png" alt="">
-                <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="html/brawlers.html">Brawlers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="html/modos-juego.html">Modos de Juego</a></li>
-                    <li class="nav-item"><a class="nav-link" href="html/competitivo.html">Competitivo</a></li>
-                </ul>
-                <i class="ph ph-list nav-menu"></i>
+            <a href="https://supercell.com/en/games/brawlstars/"><img class="nav-img" src="imgs/logo.png" alt=""></a>
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/brawlers.html">Brawlers</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/modos-juego.html">Modos de Juego</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/competitivo.html">Competitivo</a></li>
+            </ul>
+            <label for="toogle" id="label-toogle"><i class="ph ph-sun"></i><i class="ph ph-moon"></i></label>
+            <input type="checkbox" id="toogle">
+            <i class="ph ph-list nav-menu"></i>
         </nav>
         <div>
             <img class="header-img" src="imgs/portada.png" alt="">
@@ -36,18 +38,19 @@
                 <img class="about-img img-section" src="imgs/brawlstars.webp" alt="">
             </div>
             <article class="about-article">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio a saepe beatae veritatis, asperiores inventore numquam error! Minus ratione, et perspiciatis fuga eligendi fugit laborum ut dolor! Accusamus, quibusdam doloribus!</p>
+                <h2>Brawl Stars</h2>
+                <p>Es un juego para dispositivos móviles que ofrece modos de juego 3c3 y Supervivencia.</p>
+                <h3>Descarga la app</h3>
                 <div class="content-btn-download">
-                    <a class="btn-download">
-                        <i class="ph ph-apple-logo ic-download"></i>
+                    <a href="https://apps.apple.com/us/app/brawl-stars/id1229016807" class="btn-download">
+                        <i class="ph-fill ph-apple-logo ic-download"></i>
                         <div>
                             <p>Descargar en la</p>
                             <span class="btn-download-content">App Store</span>
                         </div>
                     </a>
-                    <a class="btn-download">
-                        <i class="ph ph-google-play-logo ic-download"></i>
+                    <a href="https://play.google.com/store/apps/details?id=com.supercell.brawlstars&hl=en" class="btn-download">
+                        <i class="ph-fill ph-google-play-logo ic-download"></i>
                         <div>
                             <p>Consiguelo en</p>
                             <span class="btn-download-content">Google Play</span>
@@ -61,9 +64,9 @@
                 <img class="brawlers-img img-section" src="imgs/Brawlers.png" alt="">
             </div>
             <article class="brawlers-article">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, saepe quis vitae aspernatur ipsam veritatis distinctio fugiat fuga accusamus nobis quae officia ea voluptatum adipisci dolorum enim! Exercitationem, maiores nam.</p>
-                <button class="button"><span class="button-content">Saber más</span></button>
+                <h2>Explora cada Brawler</h2>
+                <p>Conoce sus caracteristicas y habilidades para elegir el que se adapte más a tu estilo de juego. Son 79 brawlers en total.</p>
+                <a href="html/brawlers.html" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
         <section class="section-modos">
@@ -73,7 +76,7 @@
             <article class="modos-article">
                 <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem.</p>
-                <button class="button"><span class="button-content">Saber más</span></button>
+                <a href="html/modos-juego.html" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
         <section class="section-competitivo">
@@ -83,7 +86,7 @@
             <article class="competitivo-article">
                 <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem.</p>
-                <button class="button"><span class="button-content">Saber más</span></button>
+                <a href="html/competitivo.html" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
     </main>
