--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <img class="modos-img img-section" src="imgs/Modos.png" alt="">
             </div>
             <article class="modos-article">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem.</p>
+                <h2>Conoce los diversos modos de juego</h2>
+                <p>En brawl stars tenemos diferentes modos de juego para cada rol, desde enfrentamientos freneticos hasta combates estrategicos por la victoria.</p>
                 <a href="html/modos-juego.html" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
@@ -84,8 +84,8 @@
                 <img class="competitivo-img img-section" src="imgs/competitivo.png" alt="">
             </div>
             <article class="competitivo-article">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem. Quisquam, quod. Saepe, debitis. Eum, quos. Quaerat, quidem.</p>
+                <h2>Competitivo</h2>
+                <p>Conoce las rankeds y los torneos que se llevan acabo cada año para conocer a los mejores jugadores por su versatilidad y habilidad durante las batallas, y compite por las multiples recompensas por jugar</p>
                 <a href="html/competitivo.html" class="button"><span class="button-content">Saber más</span></a>
             </article>
         </section>
